--- a/ss05/baitap/bt6.css
+++ b/ss05/baitap/bt6.css
@@ -1,4 +1,4 @@
-.hi{
+.c{
     width: 700px;
     height: 30px;
     text-align: center;
@@ -6,38 +6,38 @@
     border-color: green;
     padding-top: 10px;
 }
-.what{
+.b{
     background-color: rgb(235, 230, 230);
     display: inline;
     color: red;
 }
-.W{
+.a{
     display: inline;
 }
-.text1{
+.g{
     color: red;
     display: inline;
 }
-.text2 {
+.h {
     color:blue;
     display: inline;
 }
-.text3 {
+.A {
     color: red;
     display: inline;
 }
-.text4 {
+.B {
     color: blue;
     display: inline;
 }
-.text5 {
+.C {
     display: inline;
 }
-.center {
+.f{
     color: rgb(141, 58, 58);
     display: inline;
 }
-.A{
+.d{
     width: 700px;
     background-color: rgb(223, 221, 221);
     padding-left: 20px;
@@ -45,7 +45,7 @@
     border-radius: 4px;
     
 }
-.B{
+.e{
     width: 650px;
     background-color:white;
     border-left: 5px solid green;
@@ -53,7 +53,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
 }
-.button{
+.D{
     border-radius: 4PX;
     border: 0px;
     color: white;
